[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
anyhow = "1.0.69"
assert_cmd = "2.0.8"
predicates = "2.1.5"
assert_fs = "1.0.10"